      in order to select which troves will be mirrored (CNY-3334)

  o Bug Fixes:
    * Shared library RPATH entries with a double leading slash (//)
      no longer cause paths to be recorded in soname dependencies
      in certain circumstances. (CNY-3425)
    * Output text for the conary update command has been changed to more
      clearly describe dependency resolution problems (CNY-3154)

  o Internal Changes:
    * Combined TroveCache and TroveCacheWrapper objects in build code

Changes in 2.1.16:
  o New Features:
    * RPM capsule packages can now derived.  In addition, capsule 
      recipes can now be used to modify the contents of a capsule or add
      files to the capsule component in the non-derived case as well. 
      (CNY-3348)
    * RPM capsules will now represent the HDRID/SHA1HEADER tag in
      troveInfo.  This will differentiate RPMs that are not really
      the same but have been built with the same NEVRA. (CNY-3410)
    * Some unhandled tags will cause errors at build time, to
      ensure that any necessary handling is done before such
      packages are built into a repository. (CNY-3404)
    * Allow automatic sharing of InitialContents files, including ghost
      files for encapsulated RPMs
    * Allow encapsulated files in /usr/share/doc to silently replace each
      other. This mirrors a feature in the patched version of RPM Red Hat
      shipped in RHEL4 and RHEL5 which is used for biarch packages.
      (CNY-3420)

  o Bug Fixes:
    * For locale RPM dependencies, RPM flags are now properly converted 
      to conary dep flags (CNY-3411)
    * Clone operations no longer print an error in the callback. (CNY-3413)
    * The lookaside now properly handles URLs that include arguments.
      (CNY-3418)
    * Requests to a capsule-injecting proxy no longer fail if they
      contain a mix of uncached capsule and non-capsule troves.
      (CNY-3417)
    * Pluggable policy can now override internal policy of the same